//
//  AccessibilityIdentifiers.swift
//  MVPimageGenerator
//
//  Created by Sergey on 25/05/23.
//

import Foundation

enum AccessibilityIdentifier {
    static let textfield          = "QueryTextField"
    static let generateButton     = "GenerateButton"
    static let imageView          = "Image"
    static let favoriteButton     = "FavoriteButton"
    static let tableview          = "FavoritesTableView"
}
