...
    func updateGenerateButtonState() {
        generateButton.isEnabled = !(textField.text?.isEmpty ?? true)
    }
    
    func showAlert(with error: Error) {
        let alert = UIAlertController(title: "Error", message: error.localizedDescription, preferredStyle: .alert)
        alert.addAction(UIAlertAction(title: "OK", style: .default, handler: nil))
        present(alert, animated: true, completion: nil)
    }
    
    func imageSavedToFavorites() {
        DispatchQueue.main.async {
            let alert = UIAlertController(title: "Успешно", message: "Изображение добавлено в избранное", preferredStyle: .alert)
            alert.addAction(UIAlertAction(title: "OK", style: .default, handler: nil))
            
            self.present(alert, animated: true, completion: nil)
        }
    }
    
...
